# jihe

./: Cargo.toml  README.md
src/: curve.rs  curve_count.rs  curve_count.wgsl  curve_eval.rs  curve_eval.wgsl  main.rs  renderer.rs  shader.wgsl
src/curve/: curve_count.rs  curve_count.wgsl  curve_eval.rs  curve_eval.wgsl  curve_write.rs  curve_write.wgsl  evaluate.rs  evaluate.wgsl  trace.rs  trace.wgsl
src/renderer/: buffer.rs  curve.rs  fps.rs  frame_counter.rs  profile.rs
src/renderer/curve/: evaluate.rs  evaluate.wgsl  trace.rs  trace.wgsl  write.rs  write.wgsl
