[package]
name = "jihe"
version = "0.1.0"
edition = "2024"

[features]
default = []
profile = ["dep:wgpu-profiler"]

[dependencies]
encase = "0.12"
env_logger = "0.11"
glam = { version = "0.33", features = ["encase"]}
log = "0.4"
pollster = "0.4"
thiserror = "2.0"
wgpu = "29.0"
wgpu-profiler = { version = "0.27", optional = true }
winit = "0.30"
